<resources>
    <string name="app_name">Language Translator</string>
    <string name="download_model">Downloading language model</string>
    <string name="translating">Translating...</string>
    <string name="language_translator">Language Translator</string>
    <string name="source_text">Source Text</string>
    <string name="translated_text">Translated Text</string>
    <string name="translate">Translate</string>
    <string name="say_something">Say Something</string>
</resources>