<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black_shade_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.MaterialTheme"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_translator"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:textColor="@color/yellow"
        android:fontFamily="@font/kaushan_script"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        >

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/idFromSpinner"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_right_arrow"
            android:layout_gravity="center"
            app:tint="@color/white"
            />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/idToSpinner"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:gravity="center"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/source_text"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/idEditSource"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textImeMultiLine|textCapWords"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="5dp"
        />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_mic"
        app:tint="@color/yellow"
        android:id="@+id/idIVMic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_something"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:id="@+id/idBtnTranslate"
        />

    <TextView
        android:id="@+id/idTranslatedTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/translated_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        />



</LinearLayout>